2006-06-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_read): Don't
	truncate UID for syslog output.

	* modules/pam_time/pam_time.c: Replace type boolean with int.
	* modules/pam_group/pam_group.c: Likewise.

2006-06-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/bigcrypt.h: New.
	* modules/pam_unix/Makefile.am: Add bigcrypt.h.
	* modules/pam_unix/bigcrypt.c: Include bigcrypt.h.
	* modules/pam_unix/support.c: Include bigcrypt.h, remove
	own prototype.
	* modules/pam_unix/bigcrypt_main.c: Include bigcrypt.h, remove
	own prototype.
	* modules/pam_unix/pam_unix_passwd.c: Include bigcrypt.h, remove
	own prototype.

	* modules/pam_time/pam_time.c (logic_member): Remove unused
	variable len.

	* modules/pam_group/pam_group.c (logic_field): Accept
	colon in tty name. [#1428276].
	(logic_member): Remove unused variable len.
	(check_account): Fix usage of err variable in debug code.

	* modules/pam_time/pam_time.c (logic_field): Likewise.

	* configure.in: Add special exceptions for icc: different
	compiler warnings, no PIE support.

2006-06-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_misc.c (_pam_strdup): Use strlen and strcpy.

	* configure.in: Remove --enable-memory-debug, add option
	to disable prelude if installed.

	* modules/pam_tally/pam_tally.c: Remove MEMORY_DEBUG
	* modules/pam_filter/upperLOWER/upperLOWER.c: Likewise.
	* modules/pam_unix/unix_chkpwd.c: Likewise.
	* libpam/include/security/_pam_types.h: Likewise.
	* libpam/libpam.map: Remove LIBPAM_MALLOC_DEBUG export.
	* libpam/pam_malloc.c: Remove file.
	* libpam/Makefile.am: Remove pam_malloc.c and pam_malloc.h.

	* libpam/pam_handlers.c (extract_modulename): Use _pam_strdup
	instead of strdup.

	* libpam/pam_private.h: Remove _pam_strCMP.
	* libpam/pam_misc.c: Likewise.
	* libpam/pam_handlers.c: Replaced _pam_strCMP with strcasecmp.

2006-06-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_tally/Makefile.am (AM_LDFLAGS): Remove flags